--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -9,6 +9,7 @@
 {% section 'test-results' %}
 {% section 'rose-quartz' %}
 {% section 'testimonials' %}
+{% section 'featured-testimonial' %}
 {% section 'newsletter' %}
 {% section 'cta' %}
 
