--- a/sections/rose-quartz.liquid
+++ b/sections/rose-quartz.liquid
@@ -38,6 +38,18 @@
                             <p>Rose quartz, also used in gua sha tools and facial rollers, promotes healthy circulation and lymphatic drainage.</p>
                         </div>
                     </div>
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h4>Ancient</h4>
+                            <p>Ancient cultures believed in its ability to promote emotional balance, healing, and self-love.</p>
+                        </div>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-content">
+                            <h4>Tech</h4>
+                            <p>Today, quartz plays a vital role in timekeeping and computing technologies due to its natural resonant frequencies.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
