--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -29,7 +29,7 @@
                     <div class="product-price-wrapper">
                         <div class="product-price">$39.00</div>
                     </div>
-                    <a href="/pages/shop-landing" class="product-cta">
+                    <a href="/pages/products" class="product-cta">
                         Shop Now
                     </a>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="product-price-wrapper">
                         <div class="product-price">$39.00</div>
                     </div>
-                    <a href="/pages/shop-landing" class="product-cta">
+                    <a href="/pages/products" class="product-cta">
                         Shop Now
                     </a>
                 </div>
