--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -24,7 +24,7 @@
             <a href="#about" class="nav-link">About</a>
             <a href="#features" class="nav-link">Benefits</a>
             <a href="#testimonials" class="nav-link">Reviews</a>
-            <a href="{{ routes.collections_url }}" class="nav-cta">Shop</a>
+            <a href="/pages/products" class="nav-cta">Shop</a>
             
             {% comment %} Partner Dashboard Link {% endcomment %}
             {% if customer.tags contains 'wholesale-partner' %}
